@@ -8,6 +8,7 @@ CHANGELOG
 = 2.0.4 =
 -------------------------------------------------
 * Fixed a bug when user can enroll in the course without paying to paid course.
+* Improved integration with WooCommerce - when we change order status from completed to another status, a student will be withdrawn from the ordered courses.
 
 = 2.0.3 =
 -------------------------------------------------
